--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -1,7 +1,12 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Authorization
+@using Radzen
+@using Radzen.Blazor
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using SpeedwayTyperApp.Client
+@using SpeedwayTyperApp.Shared.Models
+@using Microsoft.AspNetCore.Components.Forms
