improving the view display

--- a/Client/Pages/Login.razor
+++ b/Client/Pages/Login.razor
@@ -12,7 +12,7 @@
 </EditForm>
 
 @code {
-    private Login loginModel = new Login();
+    private LoginModel loginModel = new LoginModel();
 
     private async Task HandleLogin()
     {
