--- a/Client/Pages/MainLayout.razor
+++ b/Client/Pages/MainLayout.razor
@@ -6,6 +6,7 @@
     <RadzenHeaderRow>
         <RadzenHeaderColumn Width="100%">
             <h1>Speedway Typer</h1>
+            <a href="/login">Login</a>
         </RadzenHeaderColumn>
     </RadzenHeaderRow>
 </RadzenHeader>
