--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -8,5 +8,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using SpeedwayTyperApp.Client
+@using SpeedwayTyperApp.Client.Services
 @using SpeedwayTyperApp.Shared.Models
 @using Microsoft.AspNetCore.Components.Forms
