Implement authenticated management views and Auto-90 validation

--- a/Client/Pages/ChangePassword.razor
+++ b/Client/Pages/ChangePassword.razor
@@ -1,27 +1,35 @@
-﻿@page "/login"
+﻿@page "/change-password"
+@attribute [Authorize]
 @using SpeedwayTyperApp.Shared.Models
 @inject HttpClient Http
 @inject NavigationManager Navigation
 
-<div class="change-password-box">
-    <div class="change-password-container">
-        <h3>Zmień Hasło</h3>
-        <EditForm Model="changePasswordModel" OnValidSubmit="HandleChangePassword">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
-            <div class="form-group">
-                <RadzenPassword @bind-Value="changePasswordModel.CurrentPassword" Placeholder="Obecne Hasło" class="form-control" />
+<AuthorizeView>
+    <Authorized>
+        <div class="change-password-box">
+            <div class="change-password-container">
+                <h3>Zmień Hasło</h3>
+                <EditForm Model="changePasswordModel" OnValidSubmit="HandleChangePassword">
+                    <DataAnnotationsValidator />
+                    <ValidationSummary />
+                    <div class="form-group">
+                        <RadzenPassword @bind-Value="changePasswordModel.CurrentPassword" Placeholder="Obecne Hasło" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <RadzenPassword @bind-Value="changePasswordModel.NewPassword" Placeholder="Nowe Hasło" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <RadzenPassword @bind-Value="changePasswordModel.ConfirmNewPassword" Placeholder="Potwierdź Nowe Hasło" class="form-control" />
+                    </div>
+                    <RadzenButton ButtonType="ButtonType.Submit" Text="Zmień Hasło" class="btn" />
+                </EditForm>
             </div>
-            <div class="form-group">
-                <RadzenPassword @bind-Value="changePasswordModel.NewPassword" Placeholder="Nowe Hasło" class="form-control" />
-            </div>
-            <div class="form-group">
-                <RadzenPassword @bind-Value="changePasswordModel.ConfirmNewPassword" Placeholder="Potwierdź Nowe Hasło" class="form-control" />
-            </div>
-            <RadzenButton ButtonType="ButtonType.Submit" Text="Zmień Hasło" class="btn" />
-        </EditForm>
-    </div>
-</div>
+        </div>
+    </Authorized>
+    <NotAuthorized>
+        <RedirectToLogin />
+    </NotAuthorized>
+</AuthorizeView>
 
 @code {
     private ChangePasswordModel changePasswordModel = new ChangePasswordModel();
