--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
 @using Radzen
 @using Radzen.Blazor
 @using Microsoft.AspNetCore.Components.Routing
@@ -11,3 +12,4 @@
 @using SpeedwayTyperApp.Client.Services
 @using SpeedwayTyperApp.Shared.Models
 @using Microsoft.AspNetCore.Components.Forms
+@using System.ComponentModel.DataAnnotations
