--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -1,6 +1,10 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using System.Net.Http.Json
+@using System.Linq
+@using System
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.Forms
 @using Radzen
 @using Radzen.Blazor
 @using Microsoft.AspNetCore.Components.Routing
@@ -10,4 +14,3 @@
 @using SpeedwayTyperApp.Client
 @using SpeedwayTyperApp.Client.Services
 @using SpeedwayTyperApp.Shared.Models
-@using Microsoft.AspNetCore.Components.Forms
